frontend/test/should_fail/index_pattern_multiple_index_multiple_access_crossed.grg
#using "index_multiple_model.gm"

rule i {
	n:N{multiple(Ni >= 0, N1j <= 1, N2j >= 42, Ni <= 44)};

	modify {
	}
}
